--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
 div{
     border: 1px solid green;
-    width: 2%;
-    height: 5%;
+    border-radius: 5px;
+    cursor: grab;
+    font-size: 20px;
 }
 p{
     text-align: center;
+}
+.jatekter{
+    width: 160px;
+    display: grid;
+    grid-template-columns: 50px 50px 50px;
+    grid-template-rows: 50px 50px 50px;
 }
