--- a/info.css
+++ b/info.css
@@ -1,13 +1,12 @@
 /**infopanel*/
 body {
     position: relative;
+    left: 40%;
 }
 .info {
     color: white;
     position: absolute;
     top: 200px;
-    left: 20%;
-    right: 20%;
     background: #120e0a;
     padding: 30px;
     z-index: 30;
@@ -23,8 +22,16 @@ body {
     padding: 20px;
     font-size: 20px;
 }
-.info button {
+.info #Zarolas{
     position: absolute;
     right: 20px;
     top: 20px;
+}
+.info #reset{
+    position: absolute;
+    left: 35%;
+    bottom: 5%;    
+    margin: auto;
+    width: 30%;
+    padding: 10px;
 }
