--- a/style.css
+++ b/style.css
@@ -1,15 +1,28 @@
-div{
-    border: 1px solid green;
-    border-radius: 5px;
-    cursor: grab;
-    font-size: 20px;
+
+h1 {
+  align-items: center;
+  font-size: 50px;
 }
-p{
-    text-align: center;
+.Kijon {
+  border: 1px solid green;
+  border-radius: 5px;
+  width: 160px;
+  margin-bottom: 2%;
+  padding: 0px;
 }
-.jatekter{
-    width: 160px;
-    display: grid;
-    grid-template-columns: 50px 50px 50px;
-    grid-template-rows: 50px 50px 50px;
+article .elem{
+  border: 1px solid green;
+  border-radius: 5px;
+  cursor: grab;
+  font-size: 500%;
+  text-align: center;
+}
+.jatekter {
+  width: 160px;
+  display: grid;
+  grid-template-columns: 95px 95px 95px;
+  grid-template-rows: 95px 95px 95px;
+}
+.elem p{
+    margin: auto;
 }
