--- a/style.css
+++ b/style.css
@@ -1,16 +1,25 @@
-
-h1 {
+body {
+    position: relative;
+    left: 40%;
+    background-color: gray;
+}
+h1{
   align-items: center;
   font-size: 50px;
 }
 .Kijon {
   border: 1px solid green;
   border-radius: 5px;
-  width: 160px;
+  width: 100px;
   margin-bottom: 2%;
   padding: 0px;
+  padding-left: 1%;
 }
-article .elem{
+.elem,.Kijon,.jatekter{
+    background-color: rgb(169, 157, 157);
+}
+article .elem {
+  background-color: rgb(169, 157, 157);
   border: 1px solid green;
   border-radius: 5px;
   cursor: grab;
@@ -23,6 +32,46 @@ article .elem{
   grid-template-columns: 95px 95px 95px;
   grid-template-rows: 95px 95px 95px;
 }
-.elem p{
+.elem p {
+  margin: auto;
+}
+
+footer p{
+    
+    width: 22.5%;
+    border: 1px solid black;
+    font-size: 37px;
+}
+/**infopanel**/
+.info {
+    color: white;
+    position: absolute;
+    top: 200px;
+    background: #383027;
+    padding: 30px;
+    z-index: 30;
+    border-radius: 5px;
+    box-shadow: 6px 7px 26px 4px rgba(26, 25, 25, 0.55);
+    -webkit-box-shadow: 6px 7px 26px 4px rgba(26, 25, 25, 0.55);
+    -moz-box-shadow: 6px 7px 26px 4px rgba(26, 25, 25, 0.55);
+}
+.info h3 {
+    font-size: 30px;
+}
+.info p {
+    padding: 20px;
+    font-size: 20px;
+}
+.info #Zarolas{
+    position: absolute;
+    right: 20px;
+    top: 20px;
+}
+.info #reset{
+    position: absolute;
+    left: 35%;
+    bottom: 5%;    
     margin: auto;
+    width: 30%;
+    padding: 10px;
 }
